--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "lab5",
+  "name": "lab6",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sophieagu.github.io/exercise-app-lab6",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
